feat: login e segurança de leads funcionando (200 OK)