@@ -1,5 +1,5 @@
 package com.jws.consig.config;
-import io.jsonwebtoken.Claims;
+
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -7,39 +7,48 @@ import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
+import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 import java.io.IOException;
-import java.util.List;
+import java.util.Collections;
 
+@Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
+
     private final JwtService jwtService;
-    public JwtAuthenticationFilter(JwtService jwtService) { this.jwtService = jwtService; }
+
+    public JwtAuthenticationFilter(JwtService jwtService) {
+        this.jwtService = jwtService;
+    }
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
             throws ServletException, IOException {
-        String header = request.getHeader("Authorization");
-        System.out.println("\n>>> [FILTER] Requisição disparada para: " + request.getRequestURI());
+        
+        String authHeader = request.getHeader("Authorization");
+        
+        if (authHeader == null || !authHeader.startsWith("Bearer ")) {
+            filterChain.doFilter(request, response);
+            return;
+        }
 
-        if (header != null && header.startsWith("Bearer ")) {
-            String token = header.substring(7);
-            System.out.println(">>> [FILTER] Token detectado. Iniciando validação...");
-            
-            if (jwtService.isTokenValid(token)) {
-                Claims claims = jwtService.extractAllClaims(token);
-                String role = claims.get("role", String.class);
-                System.out.println(">>> [FILTER] SUCESSO! Token válido. Role extraída: " + role);
-                
-                UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-                        claims.getSubject(), null, List.of(new SimpleGrantedAuthority(role))
+        String jwt = authHeader.substring(7);
+        String userEmail = jwtService.extractUsername(jwt);
+        String role = jwtService.extractRole(jwt); // Garanta que esse método existe no seu JwtService
+
+        if (userEmail != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+            if (jwtService.isTokenValid(jwt)) {
+                // Criamos a autoridade EXATAMENTE como está no banco (ROLE_CONSULTOR)
+                UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
+                        userEmail,
+                        null,
+                        Collections.singletonList(new SimpleGrantedAuthority(role))
                 );
-                SecurityContextHolder.getContext().setAuthentication(auth);
-                System.out.println(">>> [FILTER] Crachá gerado e acesso liberado no SecurityContext.");
-            } else {
-                System.out.println(">>> [FILTER] ERRO: O Token foi rejeitado pelo JwtService.");
+                authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+                SecurityContextHolder.getContext().setAuthentication(authToken);
+                System.out.println("✅ FILTRO: Usuario [" + userEmail + "] autenticado com role [" + role + "]");
             }
-        } else {
-            System.out.println(">>> [FILTER] AVISO: Nenhum cabeçalho 'Bearer' válido encontrado.");
         }
         filterChain.doFilter(request, response);
     }
